stability/tests/ui/fail/stable_missing.rs
#![feature(staged_api)]
#![stable(feature = "root", since = "1.0.0")]
#![allow(internal_features)]

#[stability::stable(feature = "test")]
fn test() {}

fn main() {}
